<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReputableCourseReview</string>
    <string name="search_list_title">Search results:</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_classes">Search</string>
    <string name="manage_account">Manage account</string>
    <string name="manage_friends">Manage friends</string>
    <string name="future_courses">Manage future courses</string>
    <string name="past_courses">Manage past courses</string>
    <string name="add_class">Add</string>
    <string name="course_list_title">Courses</string>
    <string name="return_main">Return to main</string>
    <string name="return_manage">Return to manage account</string>
    <string name="sign_out">Sign out</string>
    <string name="prompt_course">Course ID</string>
    <string name="prompt_year">Year taken</string>
    <string name="prompt_professor">Professor name</string>
    <string name="prompt_semester">Semester taken</string>
    <string name="add_course">Add course</string>
    <string name="save_course">Save course</string>
    <string name="remove_course">Remove course</string>
    <string name="add_review">Edit review</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="facebook_app_id">753272034785961</string>
    <string name="title_activity_manage_friends">Manage Friends</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_friends_detail">FriendsDetailActivity</string>

    <string-array name="ratings_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


</resources>
