<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".CourseAdditionActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="This is a header"
        android:textColor="#000"
        android:textSize="20sp" />

    <ScrollView android:id="@+id/main_form" android:layout_width="match_parent"
        android:layout_height="match_parent" android:fillViewport="false">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText android:id="@+id/add_course_name" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_course"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/add_professor_name" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_professor"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/add_semester" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_semester"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <Button android:id="@+id/add_review_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/add_review"
                android:textStyle="bold" android:onClick="addReviewClicked"/>

            <Button android:id="@+id/save_course_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/save_course"
                android:textStyle="bold" android:onClick="saveCourseClicked"/>

            <Button android:id="@+id/remove_course_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/remove_course"
                android:textStyle="bold" android:onClick="deleteCourseClicked"/>

        </LinearLayout>
    </ScrollView>



</LinearLayout>