<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".ManageAccountActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/manage_account_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/manage_account_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button android:id="@+id/return_to_main" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/return_main"
                android:textStyle="bold" android:onClick="returnToMainClicked"/>

            <Button android:id="@+id/manage_friends" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/manage_friends"
                android:textStyle="bold" android:onClick="manageFriendsClicked"/>

            <Button android:id="@+id/manage_future_courses" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/future_courses"
                android:textStyle="bold" android:onClick="manageFutureCoursesClicked"/>

            <Button android:id="@+id/manage_past_courses" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/past_courses"
                android:textStyle="bold" android:onClick="managePastCoursesClicked"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>