<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"

    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".FutureCourses">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="This is a header"
        android:textColor="#000"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText android:id="@+id/add_course_name" android:layout_width="238dp"
            android:layout_height="wrap_content" android:hint="@string/prompt_course"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true"
            android:layout_weight="1.58" />

        <Button android:id="@+id/add_classes_button" style="?android:textAppearanceSmall"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/add_class" android:textStyle="bold"
            android:onClick="addClassClicked" android:layout_alignParentRight="true"/>
    </LinearLayout>

    <ScrollView android:id="@+id/main_form" android:layout_width="match_parent"
        android:layout_height="match_parent" android:fillViewport="false">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView android:id="@+id/courseListTitle" android:text="@string/course_list_title"
                android:layout_height="wrap_content" android:layout_width="fill_parent" />

            <ScrollView android:id="@+id/courseListView" android:visibility="visible"
                android:layout_height="387dp" android:layout_width="match_parent"
                android:scrollbars="vertical" android:scrollbarStyle="insideInset"
                android:keepScreenOn="true" android:fadeScrollbars="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:visibility="visible"
                    android:id="@+id/courseListViewLL">

                </LinearLayout>
            </ScrollView>

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>